progress in listing own proposal and deleting them

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -1203,3 +1203,8 @@ p.initial-text-proposalPanel{
   padding: 0 1rem;
 }
 
+.own-proposals-list li{
+  margin-bottom: 0.5rem;
+  font-size: $almostNormalSize;
+}
+
