checkboxes call page activate clicking on label

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -1149,9 +1149,9 @@ th.icon-column-call-table{
 
 }
 
-.input-whiteList-container input{
+/* .input-whiteList-container input{
   width: 200px !important;
-}
+} */
 
 /* .input-whiteList-container span{
   max-height: 2.5rem;
