--- a/assets/stylesheets/dragtable.css
+++ b/assets/stylesheets/dragtable.css
@@ -29,8 +29,7 @@
     -moz-box-shadow: 4px 5px 4px #C6C6C6 inset;
     -webkit-box-shadow: 4px 5px 4px #C6C6C6 inset;
     box-shadow: 4px 5px 4px #C6C6C6 inset;
-    border-bottom: 1px solid #CCCCCC;
-    border-top: 1px solid #CCCCCC;
+    border: 1px solid #CCCCCC;
     visibility: visible !important;
     background: #EFEFEF !important; 
     visibility: visible !important;
