welcome page with conFusion card hardcoded

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -283,7 +283,7 @@ grid-section content LogIn page
 
 .suggested-tag-search-engine:hover{
   font-weight: bold;
-    /* font-size: $almostNormalSize; */
+  font-size: $almostNormalSize;
 }
 
 .search-tag-box{
