--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -427,10 +427,10 @@ button{
   background: $blue-pard;
 }
 
-.signupButton{
+/* .signupButton{
   margin-bottom: 0.8rem;
   margin-top:1rem;
-}
+} */
 
 #register-outsider-header-button{
   color: $element-color;
