--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -369,9 +369,6 @@ button{
 }
 
 
-
-
-
 .manage-call-btn {
   @extend .pard-btn;
   cursor: pointer;
@@ -1000,18 +997,7 @@ a.footer-text-link:hover{
   margin-bottom: 1.5rem;
 }
 
-.orfheo-symbol-popup{
-  background-image: url(<%= image_path 'orfheosimbolocolor.png' %>);
-  width: 100px;
-  height: 69px;
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  @include horizontal-center;
-  position: relative;
-  margin-top: 3rem;
-  margin-bottom: 2rem;
 
-}
 
 .orfheo-web-popup{
   text-align: center;  
@@ -1486,3 +1472,79 @@ COLOR PICKER
   width: 100%;
   margin-bottom: 1rem;
 }
+
+
+
+/*===============================================
+IMAGES
+================================================*/
+
+.orfheo-symbol-popup{
+  background-image: url(<%= image_path 'orfheosimbolocolor.png' %>);
+  width: 100px;
+  height: 69px;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  @include horizontal-center;
+  position: relative;
+  margin-top: 3rem;
+  margin-bottom: 2rem;
+
+}
+
+
+.orfheo-symbol-image-searchEngine{
+  background-image: url(<%= image_path 'orfheosimbolonegro.png' %>);
+  width: 90px;
+  height: 61px;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  @include horizontal-center;
+  position: relative;
+  margin-bottom: 1.5rem;
+  /* margin-top: -2rem; */
+}
+
+.welcome-img-section-header {
+  background-image: url(<%= image_path 'logo_conFusion.png' %>);
+  width: 100%;
+  @include breakpoint(large){ height: 13.75rem; }
+  @include breakpoint(medium down){ height: 22vw;}
+  @include breakpoint(small down){ height: 30vw;}
+  background-repeat: no-repeat;
+  background-size: 95% 95%;
+
+}
+
+
+.logo-header{
+  cursor: pointer;
+  background-image: url(<%= image_path 'orfheologocolor.png' %>);
+  width: 110px;
+  height: 37px;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  @include breakpoint(small down){ 
+    width: 66px;
+    height: 22px;
+    margin-top:0.3rem;
+    margin-bottom:0.7rem;
+  }
+}
+
+
+.orfheo-logo-card{
+  background-image: url(<%= image_path 'orfheologocolor.png' %>);
+  width: 120px;
+  height: 40px;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  margin-top: 5rem;
+  @include horizontal-center;
+  @include breakpoint (small down){
+    width: 90px;
+    height: 30px;
+    margin-top: 3rem;
+  }
+}
+
