send proposal if in whitelist some progress

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -1098,7 +1098,12 @@ CALL PAGE
 
 .table-proposal {
   font-size: 12px;
+  margin-bottom: 0;
   }
+
+.table-proposal tbody tr{
+  border-top: 1px solid $grey-3;
+}
 
 .table-proposal .title-row-table-proposal {
   font-size: 14px;
