--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -666,11 +666,6 @@ button{
 
 
 
-
-
-
-
-
 /*===============================================
 COMPONENTS
 ================================================*/
@@ -800,6 +795,15 @@ Profile Card
 .card-container{
   display: inline-block;
   padding: 0 1.046rem;
+  @include breakpoint(420 down) {
+  @include horizontal-center;
+  position:relative;
+  }
+}
+
+.card-container-popup{
+  display: inline-block;
+  padding: 0 0.6rem;
   @include breakpoint(420 down) {
   @include horizontal-center;
   position:relative;
