create profile card

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -480,6 +480,33 @@ User Section
   text-align: center;
 } 
 
+.addCircle-create-profile-card{
+  color: black;
+  @include horizontal-center;
+  font-size: 2.6rem;
+  margin-top: 2.3rem;
+  position: relative;
+  @include breakpoint(small down) {
+    font-size: 2rem;
+    margin-top: 1.5rem;
+  }
+}
+
+.create-profile-card-text{
+  margin-top: 1rem;
+  text-align: center;
+  color: black;
+  font-weight: bold;
+  padding-bottom: 3.4rem;
+  @include breakpoint (medium){
+    border-bottom: 1px solid #A0A09F;
+  }
+  @include breakpoint(small down) {
+    font-size: 3vw;
+    margin-top: 0.8rem;
+  }
+}
+
 
 /*===============================================
 PROFILE PAGE
