--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -1382,5 +1382,10 @@ ORGANIZATION PAGE
   vertical-align: 0.2rem;
 }
 
-
+.call-proposals-title{
+  text-align: center;
+  margin-top: 2.5rem;
+  margin-bottom: 1.5rem;
+  font-weight: bold;
+}
 
