now it is possible to send a proposal out of time if user in whitelist

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -1389,3 +1389,12 @@ ORGANIZATION PAGE
   font-weight: bold;
 }
 
+.success-inscription-title{
+  color: rgb(76, 182, 50); 
+  margin-top: -1rem; 
+  text-align: center; 
+  font-weight: bold;
+}
+
+
+
