--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -384,7 +384,7 @@ button{
     text-align: center;
     @include breakpoint(medium){
       display: inline-block; 
-      margin-left: 4.8rem; 
+      margin-left: 4rem; 
       width: 12rem;
     };
 
@@ -659,8 +659,14 @@ button{
   display: inline-block;
 }
 
- .create-space-proposal-call-page-btn:hover, .create-artist-proposal-call-page-btn:hover{
+.create-space-proposal-call-page-btn:hover, .create-artist-proposal-call-page-btn:hover{
     background: $grey-1;
+}
+
+.success-inscription-btn{
+  display: inline-block;
+  margin-left: 4rem;
+  margin-bottom: 0.5rem;
 }
 
 
