space proposal tabeñ appended on first click

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -1154,6 +1154,10 @@ CALL PAGE
   }
 }
 
+.content-box-ArtistSpace{
+  min-height: 100vh;
+}
+
 td.column-call-manager-table{
   min-width: 10rem;
 } 
