new proposals table

--- a/assets/stylesheets/ours.scss
+++ b/assets/stylesheets/ours.scss
@@ -1,4 +1,8 @@
 @import "select2.min";
 @import "dragtable";
 @import "dataTables.min";
+@import "responsive.dataTables.min.css";
+@import "buttons.dataTables.min.css";
+@import "dataTables.foundation.min.css";
+@import "keyTable.dataTables.min.css";
 @import "scss/app.scss";
