cleaned a bit of code of table proposals manager

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -1142,7 +1142,15 @@ CALL PAGE
 .table-proposal thead {
   font-size: 14px;
   font-weight: bold;
-  background: white;
+  background: #ffffff;
+}
+
+table.table-proposal.dataTable thead th, table.table-proposal.dataTable tfoot th{
+  padding: 0.625rem;
+}
+
+.table-proposal tfoot {
+  background: #ffffff;
 }
 
 .dataTables_wrapper .dataTables_paginate .paginate_button{
@@ -1280,19 +1288,19 @@ th.icon-column-call-table{
   margin-top: 2rem;
 }
 
-.submit-btn-call-manager-container{
+/* .submit-btn-call-manager-container{
   position:absolute;
   right: 0;
   height: 2.5rem;
   top: 1.8rem;
-}
+} */
 
-.submit-btn-outer-container-call-manager{
+/* .submit-btn-outer-container-call-manager{
   position:relative;
   display: block;
   margin-right: 2rem;
   font-size: $almostNormalSize;
-}
+} */
 
 #succes-box-call-manager, #successBox-whiteList{
   margin-right: 1.5rem;
