--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -1266,16 +1266,71 @@ div.inputSpace-container .select2-selection.select2-selection--multiple, div.inp
 } */
 
 .types-selector-call-manager{
-  margin-bottom: 1.5rem;
-  width: 21rem;
+  margin-bottom: 2.5rem;
+  width: 17rem;
   display: inline-block;
   margin-right: 3rem;
   margin-right: 9rem;
 
 }
 
-.program-all-checkbox-container{
-  display: inline;
+.select-category-container-call-manager{
+  width: 17rem;
+  display: inline-block;  
+  position: absolute;
+  top: 0rem;
+  left: 22.5rem;
+}
+
+
+/* .select-category-container-call-manager span.select2-container--default .select2-selection--single{
+  @include border-radius(0.125rem);
+  height:2.43rem;
+  outline: none;
+  border: 1px solid #cacaca;
+}
+
+.select-category-container-call-manager span.select2-container--default .select2-selection--single .select2-selection__rendered, .select-category-container-call-manager span.select2-container--default .select2-selection--single .select2-selection__arrow{
+  line-height: 2.43rem;
+  height: 2.43rem;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__arrow b {
+    border-color:#090909 transparent transparent transparent;
+} */
+
+.table-box-call-manager-page{
+  margin-top: 1rem;
+}
+
+div.dt-buttons{
+  float: right;
+  right: 2rem;
+  top: 0.5rem;
+}
+
+a.dt-button{
+  /* @extend .pard-btn; */
+  padding: 0.1rem 0.4rem;
+  font-size: $smallSize;
+}
+
+  
+div.dataTables_wrapper div.dataTables_filter label{
+  margin-right: 12rem;
+  margin-bottom: 1rem;
+}
+
+div.dataTables_wrapper div.dataTables_filter input{
+  width: 25rem !important;
+  font-size: $almostNormalSize;
+}
+
+.allCheckBoxesBox{
+  display: inline-block;
+  position: absolute;
+  top: 0.5rem;
+  right: 0;
 }
 
 .title-colText-call-manager{
@@ -1287,13 +1342,15 @@ div.inputSpace-container .select2-selection.select2-selection--multiple, div.inp
 } */
 
 
-.search-input-call-manager-container{
+
+
+/* .search-input-call-manager-container{
   width: 36rem;
   @include horizontal-center;
   position: relative;
   margin-top: 2rem;
 }
-
+ */
 /* .submit-btn-call-manager-container{
   position:absolute;
   right: 0;
