--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -1351,19 +1351,19 @@ div.dataTables_wrapper div.dataTables_filter input{
   margin-top: 2rem;
 }
  */
-/* .submit-btn-call-manager-container{
+.submit-btn-call-manager-container{
   position:absolute;
   right: 0;
   height: 2.5rem;
   top: 1.8rem;
-} */
+}
 
-/* .submit-btn-outer-container-call-manager{
+.submit-btn-outer-container-call-manager{
   position:relative;
   display: block;
   margin-right: 2rem;
   font-size: $almostNormalSize;
-} */
+}
 
 #succes-box-call-manager, #successBox-whiteList{
   margin-right: 1.5rem;
