--- a/assets/stylesheets/scss/app.scss
+++ b/assets/stylesheets/scss/app.scss
@@ -1,7 +1,7 @@
 @charset 'utf-8';
 
 
-//@import 'jquery-ui';
+@import 'jquery-ui';
 @import 'settings';
 @import 'foundation';
 @import 'motion-ui';
