--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,53 +2,63 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
 
 	<head>
-    <title>orfheo</title>
- 		<meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <title>orfheo</title>
+     		<meta charset="utf-8" />
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Orfheo es la primera comunidad artístico-cultural donde conocer proyectos, encontrarse y crear juntos experiencias inolvidables." />
-    <meta name="keywords" content="orfheo, convocatoria, conFusión, festival, Benimaclet, valencia, arte, artistas, espacios, asociaciones, música, taller, artes escénicas, exposición, comunidad, cultura, plataforma, social, network, gestión, cultural" />
-    <meta name="robots" content="index, follow" />
-    <meta name="author" content="orfheo community project" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="Orfheo es la primera comunidad artístico-cultural donde conocer proyectos, encontrarse y crear juntos experiencias inolvidables." />
+        <meta name="keywords" content="orfheo, convocatoria, conFusión, festival, Benimaclet, valencia, arte, artistas, espacios, asociaciones, música, taller, artes escénicas, exposición, comunidad, cultura, plataforma, social, network, gestión, cultural" />
+        <meta name="robots" content="index, follow" />
+        <meta name="author" content="orfheo community project" />
 
-    <!-- fb preview meta tags -->
-    <meta property="og:image:url" content="<%= image_path 'orfheo_fb_preview.jpg' %>"/>     <!-- img 1200 x 630 (alto x ancho) -->
-    <meta property="og:image:type" content="image/jpg">
-    <meta property="og:title" content="orfheo"/>
-    <meta property="og:url" content="http://www.orfheo.org"/>
-    <meta property="og:site_name" content="orfheo"/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:description" content="Orfheo es la primera comunidad artístico-cultural donde conocer proyectos, encontrarse y crear juntos experiencias inolvidables."/>
+        <!-- fb preview meta tags -->
+        <meta property="og:image:url" content="<%= image_path 'orfheo_fb_preview.jpg' %>"/>     <!-- img 1200 x 630 (alto x ancho) -->
+        <meta property="og:image:type" content="image/jpg">
+        <meta property="og:title" content="orfheo"/>
+        <meta property="og:url" content="http://www.orfheo.org"/>
+        <meta property="og:site_name" content="orfheo"/>
+        <meta property="og:type" content="website"/>
+        <meta property="og:description" content="Orfheo es la primera comunidad artístico-cultural donde conocer proyectos, encontrarse y crear juntos experiencias inolvidables."/>
 
+        <!-- favicon -->
+        <link rel='shortcut icon' href="<%= image_path 'orfheoiconocolor.png' %>" type='image/png'/ >
 
-    <!-- ... -->
+        <!-- google icon -->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        
+        <!-- google maps -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCimmihWSDJV09dkGVYeD60faKAebhYJXg&libraries=places"
+        async defer></script>
 
-    <link rel='shortcut icon' href="<%= image_path 'orfheoiconocolor.png' %>" type='image/png'/ >
+        <!-- Monitoring code google-analytics -->
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCimmihWSDJV09dkGVYeD60faKAebhYJXg&libraries=places"
-    async defer></script>
+          ga('create', 'UA-76861000-1', 'auto');
+          ga('send', 'pageview');
+        </script>
+
 	</head>
 
+
 	<body>
-		<!-- <section id="section_layout"> -->
-    <%= javascript_tag 'jquery' %>
-    <%= javascript_tag 'ours' %>
-    <%= stylesheet_tag 'ours' %>
-	  <%= yield %>
-    <!-- </section> -->
+        <%= javascript_tag 'jquery' %>
+        <%= javascript_tag 'ours' %>
+        <%= stylesheet_tag 'ours' %>
+    	  <%= yield %>
 	
 <!-- 	<script>
       $(window).load(function() {
          $(document).foundation();
       }); 
   </script>
+
  -->
-
-
 	</body>
 
 </html>
