added create production popup

--- a/assets/stylesheets/ours.scss
+++ b/assets/stylesheets/ours.scss
@@ -1,8 +1,8 @@
 @import "select2.min";
 @import "dragtable";
 @import "dataTables.min";
-@import "responsive.dataTables.min.css";
-@import "buttons.dataTables.min.css";
-@import "dataTables.foundation.min.css";
-@import "keyTable.dataTables.min.css";
+@import "responsive.dataTables.min";
+@import "buttons.dataTables.min";
+@import "dataTables.foundation.min";
+@import "keyTable.dataTables.min";
 @import "scss/app.scss";
