--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -669,6 +669,7 @@ Aside
   margin-top:0.2rem;
 }
 
+
 /*-----------------
 Profile Section
 -------------------*/
@@ -1386,7 +1387,7 @@ div.dataTables_wrapper div.dataTables_filter input{
   position:absolute;
   right: 0;
   height: 2.5rem;
-  top: 1.8rem;
+  top: 2rem;
 }
 
 .submit-btn-outer-container-call-manager{
@@ -1492,7 +1493,7 @@ div.dataTables_wrapper div.dataTables_filter input{
   margin-left: 1.5rem;
 } 
 
-.callPage-categorySelector{
+.popup-categorySelector{
   margin-top: 2rem;
 }
 
